--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-date-range": "^2.0.1",
     "react-datepicker": "^8.4.0",
     "react-dom": "^19.1.0",
+    "react-hot-toast": "^2.5.2",
     "react-router": "^7.7.0",
     "tailwindcss": "^4.1.11"
   },
